[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = ">=3.10.0,<3.11"
mathstropy = "4.0.7"
numpy = "^1.20"
matplotlib = "*"
pygame = "^2.4.0"
replit = "^3.2.4"
Flask = "^2.2.0"
urllib3 = "^1.26.12"
mathstrovehiclesim = "^2.0.8"  # Update to a stable version
opencv-python = "^4.8.1"
scikit-learn = "^1.3.1"
pandas = "1.3.5"
libs = "^0.0.10"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
